# ymery

./: .gitignore  Makefile  README.md  pyproject.toml
demo/classic/: app.yaml  data.yaml  demo.yaml  foreach-key-demo.yaml  implot-demo.yaml  kernel-demo.yaml  popups-demo.yaml  tab-demo.yaml  table-demo.yaml  tooltip-demo.yaml  widgets-demo.yaml  widgets.yaml
demo/hello-imgui/: app.yaml  data.yaml  hello-imgui-widgets.yaml  widgets.yaml
demo/hello-imgui-dockable-windows-simple/: app.yaml
demo/hello-imgui-full/: app.yaml  data.yaml  hello-imgui-widgets.yaml  widgets.yaml
demo/hello-imgui-full/examples/: markdown-demo.yaml  matplotlib-demo.yaml  property-editor.yaml  text-editor-demo.yaml  widgets-demo.yaml
demo/hello-imgui-full/widgets/: basic.yaml  colors.yaml  combos.yaml  drags.yaml  listboxes.yaml  selectables.yaml
docs/: README.md  build.md  imery-lang.md  index.html  plugins.md  ymery-lang.md
docs/demo/: index.html
docs/demo/examples/: examples.json
docs/demo/js/: examples.js  main.js  pyodide_loader.js
docs/design/: widgets.md
docs/tmp/: providers-metadata.md
docs/tutorial/: README.md
docs/tutorial/00-minimal-app/: README.md  app.yaml  run.sh
docs/tutorial/01-basic-widgets/: README.md  app.yaml  run.sh
scripts/: aggregate_demo_yaml.py  bump_version.py  hatch_build.py
src/imery/: app.py  data_bag.py  plugin_manager.py  types.py
src/imery/backend/: kernel.py
src/ymery/: __init__.py  __main__.py  app.py  data_bag.py  decorators.py  dispatcher.py  lang.py  logging.py  plugin_manager.py  result.py  stringcase.py  types.py  utils.py
(+110 files in other folders)
